clusters/talos-cluster/deluge/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deluge
  labels:
    pod-security.kubernetes.io/enforce: privileged
