clusters/talos-cluster/deluge/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deluge-deployment
  namespace: deluge
  labels:
    app: deluge-deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: deluge-deployment
  template:
    metadata:
      name: deluge-deployment
      labels:
        app: deluge-deployment
    spec:
      restartPolicy: Always
      containers:
        - name: gluetun
          image: qmcgaw/gluetun:latest
          imagePullPolicy: Always
          securityContext:
            capabilities:
              add: [ "NET_ADMIN" ]
          volumeMounts:
            - name: gluetun-config
              mountPath: /gluetun
          ports:
            - containerPort: 8388
              name: shadowsocks-tcp
              protocol: TCP
            - containerPort: 8388
              name: shadowsocks-udp
              protocol: UDP
            - containerPort: 8112
              name: deluge-web
              protocol: TCP
        - name: deluge
          image: linuxserver/deluge:2.1.1
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - |
                  nslookup google.com 127.0.0.1 > /dev/null || exit 1
                  grep "nameserver 127.0.0.1" /etc/resolv.conf > /dev/null || exit 1
            initialDelaySeconds: 10
            periodSeconds: 10
          ports:
            - containerPort: 8112
              name: deluge-web
              protocol: TCP
            - containerPort: 58846
              name: deluge-daemon
              protocol: TCP
            - containerPort: 6881
              name: deluge-tcp
              protocol: TCP
            - containerPort: 6881
              name: deluge-udp
              protocol: UDP
          volumeMounts:
            - name: deluge-config
              mountPath: /config
            - name: deluge-media
              mountPath: /media
      volumes:
        - name: gluetun-config
          persistentVolumeClaim:
            claimName: gluetun-data
        - name: deluge-config
          persistentVolumeClaim:
            claimName: deluge-data
        - name: deluge-media
          persistentVolumeClaim:
            claimName: deluge-media
